[tool.poetry]
name = "New_project"
version = "0.1.0"
description = ""
authors = ["Nikita Semenov <n.semenov@rambler.ru.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "==8.3.4"
selene = "==2.0.0rc9"

[tool.poetry.dev-dependencies]
pylint = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
