[tool.poetry]
name = "New_project"
version = "0.1.0"
description = "my first project with poetry"
authors = ["Nikita Semenov <n.semenov@rambler.ru.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
selene = "2.0.0rc9"
pytest = "8.2.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pylint = "^3.3.3"
